<resources>
    <string name="app_name">MyNewsApp</string>
    <string name="news_feed">News Feed</string>
    <string name="home">Home</string>
    <string name="sports">Sports</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="search_news">Search News</string>
    <string name="breaking_news">Breaking News</string>
    <string name="saved">Saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
</resources>